--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>eatO</title>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div id="nav"></div>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
